syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "accounts.proto";
import "sessions_enums.proto";
import "admin/admin_trading_level_change.proto";
import "admin/admin_mde.proto";
import "admin/admin_dashboard_enums.proto";

option csharp_namespace = "DTS.Libs.Protos.AdminDashboard";

message AdminDashboardRequest {
}

message AdminDashboardResponse {
	repeated AdminDashboardItem items = 1;
	repeated ResponseWarning Warnings = 101;
	repeated ResponseError Errors = 102;
}

message VerificationDecision
{
	int32 VerificationDecisionId = 1;
	string VerificationSessionId = 2;
	EnumVerificationStatus Status = 3;
	google.protobuf.Timestamp DecisionTime = 4;
}

message AdminDashboardItem {
	EnumAdminDashboardItemType type = 1;
	VerificationDecision verificationDecision = 2;
	Account account = 3;
	AdminSearchTradingLevelChange tradingLevelChange = 4;
	MdeRequest marketDataEntitlement = 5;
}
